--- a/css/base.css
+++ b/css/base.css
@@ -44,5 +44,5 @@ article header a:hover { text-decoration: none; }
 #back-to-top { width: 38px; height: 38px; right: 64px; bottom: 64px; z-index: 2147483647; background: url(images/back-to-top.png) no-repeat; }
 footer.page-bottom { margin-top: 20px; padding: 40px 0; background: #f5f5f5; border-top: 1px solid #f5f5f5; box-shadow: 0 0 4px rgba(0,0,0,.25); }
 
-form.login-form  { width: 400px; margin: 0 auto; padding: 15px; background: #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }
-.content-error { padding: 15px; background: #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }}
+form.login-form  { width: 400px; margin: 0 auto; padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }
+.content-error { padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }}
