--- a/css/base.css
+++ b/css/base.css
@@ -18,7 +18,7 @@ body { padding-top: 80px; background: #dfdfdf; }
 form.form-search { width: 240px; }
 form .input-group span.btn-primary { color: #ffffff; background: #428bca; border-color: #357ebd; }
 form .input-group span.btn-primary:hover { color: #ffffff; background: #3276b1; border-color: #285e8e; }
-header.navbar-fixed-top { height: 60px; padding-top: 5px; background: #f9f9f9; border-bottom: 1px solid #f9f9f9; box-shadow: 0 0 4px rgba(0,0,0,.25); }
+header.navbar-fixed-top { height: 60px; padding-top: 5px; background: #f9f9f9; border-bottom: 1px solid #f9f9f9; box-shadow: 0 0 2px rgba(0,0,0,.25); }
 header.navbar-fixed-top h1 { margin: 0; font-size: 24px; padding-top: 8px; }
 header.navbar-fixed-top h1 a { color: #777777; text-decoration: none; }
 header.navbar-fixed-top h1 a:hover { color: #5e5e5e; text-decoration: none; }
@@ -29,7 +29,7 @@ header.navbar-fixed-top .control-box { top: 13px; }
 .control-box  .btn-group { margin-bottom: 33px; }
 .control-box .dropdown-menu { min-width: 128px; }
 
-.content { background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 2px rgba(0,0,0,.25); } 
+.content { background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); } 
 .content .wrap { margin: 15px; }
 .content article { padding: 0 10px; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 8px rgba(0,0,0,.25); }
 .content article header { margin-bottom: 10px; border-bottom: 1px solid #eeeeee; }
@@ -41,8 +41,8 @@ article header a:hover { text-decoration: none; }
 .panel-menu .panel-heading { padding: 15px 15px 0 15px; }
 .panel-menu .panel-heading h4{ margin: 0; }
 
-#back-to-top { width: 38px; height: 38px; right: 64px; bottom: 64px; z-index: 2147483647; background: url(images/back-to-top.png) no-repeat; }
-footer.page-bottom { margin-top: 20px; padding: 40px 0; background: #f5f5f5; border-top: 1px solid #f5f5f5; box-shadow: 0 0 4px rgba(0,0,0,.25); }
+#back-to-top { width: 38px; height: 38px; right: 15px; bottom: 64px; z-index: 2147483647; background: url(../images/back-to-top.png) no-repeat; }
+footer.page-bottom { margin-top: 20px; padding: 40px 0; background: #f5f5f5; border-top: 1px solid #f5f5f5; box-shadow: 0 0 2px rgba(0,0,0,.25); }
 
 form.login-form  { width: 400px; margin: 0 auto; padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }
 .content-error { padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }}
