--- a/template/profile/password_edit.html
+++ b/template/profile/password_edit.html
@@ -3,9 +3,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <div class="panel panel-menu">
-                            <div class="panel-heading"><h4><span class="glyphicon glyphicon-user"></span> 个人中心</h4></div>
-                        </div>
+                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> 个人中心</h4>
                         <div class="list-group wrap">
                             <a href="profile" class="list-group-item">
                                 <span class="glyphicon glyphicon-folder-close"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
