--- a/template/user/password_edit.html
+++ b/template/user/password_edit.html
@@ -3,9 +3,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <div class="panel panel-menu">
-                            <div class="panel-heading"><h4><span class="glyphicon glyphicon-cog"></span> 系统管理</h4></div>
-                        </div>
+                        <h4 class="wrap"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
                         <div class="list-group wrap">
                             <a href="javascript:" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
