--- a/template/profile/view.html
+++ b/template/profile/view.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> 个人中心</h4>
+                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
                         <div class="list-group wrap">
                             <a href="javascript:" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
