--- a/template/user/view.html
+++ b/template/user/view.html
@@ -23,8 +23,10 @@
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
                             <li><a href="user/${model.id}/edit"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
                             <li><a href="user/${model.id}/password/edit"><span class="glyphicon glyphicon-edit"></span> 修改密码</a></li>
+                            % if model.username != 'admin':
                             <li><a href="user/${model.id}/groups/edit"><span class="glyphicon glyphicon-wrench"></span> 设置组</a></li>
                             <li><a href="user/${model.id}/roles/edit"><span class="glyphicon glyphicon-wrench"></span> 设置角色</a></li>
+                            % endif
                             <li><a href="user"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
                             <li><a href="user/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
