--- a/template/error.html
+++ b/template/error.html
@@ -16,7 +16,8 @@
                     <h1><span class="glyphicon glyphicon-warning-sign"></span> 出错啦!</h1>
                 </div>
                 <div class="alert alert-danger">
-                    <strong>${status}</strong> ${message}
+                    <h4>${status}</h4>
+                    <p>${message}</p>
                 </div>
                 <button class="btn btn-primary btn-lg" onclick="history.back()"><span class="glyphicon glyphicon-hand-left"></span> 返回</button>
             </div>
