--- a/template/login.html
+++ b/template/login.html
@@ -13,8 +13,8 @@
         <div class="container">
             <form action="check" method="post" class="login-form">
                 % if message:
-                <div class="alert alert-danger alert-dismissable">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                <div class="alert alert-danger alert-dismissable fade in">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                     <strong>错误</strong> ${message}
                 </div>
                 % endif
