--- a/css/base.css
+++ b/css/base.css
@@ -9,9 +9,12 @@ table th { font-family: "Microsoft Yahei"; }
 table th, table td { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
 
 dl dt { font-family: "Microsoft Yahei"; }
-dl dd { margin-bottom: 10px; }
+dl dd { margin-bottom: 15px; }
+dl.dl-horizontal dt { font-family: "Microsoft Yahei"; width: 128px; }
+dl.dl-horizontal dd { margin-left: 148px; }
 
 .btn-lg { font-family: "Microsoft Yahei"; }
+.glyphicon { line-height: .9em; }
 
 body { padding-top: 80px; background: #dfdfdf; }
 
@@ -27,10 +30,10 @@ header.navbar-fixed-top form { margin-top: 8px; }
 header.navbar-fixed-top .control-box { top: 13px; }
 .control-box { right: 15px; }
 .control-box  .btn-group { margin-bottom: 33px; }
-.control-box .dropdown-menu { min-width: 128px; }
+ul.dropdown-menu { min-width: 128px; }
 
-.content { background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); } 
-.content .wrap { margin: 15px; }
+.content { background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }
+.content .wrap { margin: 20px 0; }
 .content article { padding: 0 10px; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 16px rgba(0,0,0,.25); }
 .content article header { margin-bottom: 10px; border-bottom: 1px solid #eeeeee; }
 .content article footer { padding-top: 10px; border-top: 1px solid #eeeeee;} 
@@ -40,5 +43,4 @@ article header a:hover { text-decoration: none; }
 #back-to-top { width: 38px; height: 38px; right: 15px; bottom: 64px; z-index: 2147483647; background: url(../images/back-to-top.png) no-repeat; }
 footer.page-bottom { margin-top: 20px; padding: 40px 0; background: #f5f5f5; border-top: 1px solid #f5f5f5; box-shadow: 0 0 2px rgba(0,0,0,.25); }
 
-form.login-form  { width: 400px; margin: 0 auto; padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }
-.content-error { padding: 15px; background: #ffffff; border: 1px solid #ffffff; border-radius: 4px; box-shadow: 0 0 1px rgba(0,0,0,.25); }}
+.login-form  { width: 400px; margin: 0 auto; }
