--- a/template/error.html
+++ b/template/error.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="content-error">
+            <div class="content">
                 <div class="page-header">
                     <h1><span class="glyphicon glyphicon-warning-sign"></span> 出错啦!</h1>
                 </div>
@@ -19,7 +19,9 @@
                     <h4>${status}</h4>
                     <p>${message}</p>
                 </div>
-                <button class="btn btn-primary btn-lg" onclick="history.back()"><span class="glyphicon glyphicon-hand-left"></span> 返回</button>
+                <div class="wrap">
+                    <button class="btn btn-primary btn-lg" onclick="history.back()"><span class="glyphicon glyphicon-hand-left"></span> 返回</button>
+                </div>
             </div>
         </div>
     </body>
