--- a/template/login.html
+++ b/template/login.html
@@ -11,25 +11,29 @@
     </head>
     <body>
         <div class="container">
-            <form action="check" method="post" class="login-form">
-                % if message:
-                <div class="alert alert-danger alert-dismissable fade in">
-                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                    <strong>错误</strong> ${message}
+            <div class="content login-form">
+                <div class="page-header">
+                    <h1><span class="glyphicon glyphicon-user"></span> 登录</h1>
                 </div>
-                % endif
-                <legend><h1><span class="glyphicon glyphicon-user"></span> 登录</h1></legend>
-                <input type="hidden" name="redirect" value="${redirect}" />
-                <div class="form-group">
-                    <label for="username"><font color="#ff0000">*</font>用户名</label>
-                    <input type="text" id="username" name="username" class="form-control" required="required" maxlength="16" />
-                </div>
-                <div class="form-group">
-                    <label for="password">密码</label>
-                    <input type="password" id="password" name="password" class="form-control" maxlength="16" />
-                </div>
-                <button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-ok"></span> 登录</button>
-            </form>
+                <form action="check" method="post" class="wrap">
+                    <input type="hidden" name="redirect" value="${redirect}" />
+                    % if message:
+                    <div class="alert alert-danger alert-dismissable fade in">
+                        <button type="button" class="close" data-dismiss="alert">×</button>
+                        <strong>错误</strong> ${message}
+                    </div>
+                    % endif
+                    <div class="form-group">
+                        <label for="username"><font color="#ff0000">*</font>用户名</label>
+                        <input type="text" id="username" name="username" class="form-control" required="required" maxlength="16" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">密码</label>
+                        <input type="password" id="password" name="password" class="form-control" maxlength="16" />
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-ok"></span> 登录</button>
+                </form>
+            </div>
         </div>
     </body>
 </html>
