--- a/template/error.html
+++ b/template/error.html
@@ -19,7 +19,7 @@
                     <h4>${status}</h4>
                     <p>${message}</p>
                 </div>
-                <div class="wrap">
+                <div class="mb20">
                     <button class="btn btn-primary btn-lg" onclick="history.back()"><span class="glyphicon glyphicon-hand-left"></span> 返回</button>
                 </div>
             </div>
