--- a/template/include/pagination.html
+++ b/template/include/pagination.html
@@ -1,5 +1,5 @@
 <%def name="show(action, pagination)">
-<ul class="pagination pull-right wrap">
+<ul class="pagination pull-right">
     <li class="disabled"><span>共${pagination.total}条, ${pagination.size}条/页</span></li>
     % if pagination.number == 1:
     <li class="active"><span>1</span></li>
