--- a/template/group/list.html
+++ b/template/group/list.html
@@ -4,8 +4,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
-                        <div class="list-group wrap">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
+                        <div class="list-group">
                             <a href="user" class="list-group-item">
                                 <span class="glyphicon glyphicon-folder-close"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
@@ -20,12 +20,12 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
                             <li><a href="group/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="group" method="get" class="form-search wrap">
+                        <form action="group" method="get" class="form-search mb20">
                             <div class="input-group">
                                 <input type="text" name="keyword" value="${S(keyword)}" class="form-control" placeholder="名称或描述" />
                                 <span class="input-group-addon btn btn-primary" onclick="$(this).parents('form').submit();">
@@ -33,35 +33,22 @@
                                 </span>
                             </div>
                         </form>
-                        <div class="wrap">
-                            <table class="table table-striped table-hover">
-                                <thead>
-                                    <tr>
-                                        <th width="192">名称</th>
-                                        <th>描述</th>
-                                        <th width="176">操作</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    % for item in pagination.records:
-                                    <tr>
-                                        <td><a href="group/${item.id}" title="${item.name}">${item.name}</a></td>
-                                        <td>${item.description}</td>
-                                        <td>
-                                            <a href="group/${item.id}/edit" title="修改"><span class="glyphicon glyphicon-edit"></span></a>
-                                            <a href="group/add?parent_id=${item.id}">创建子组</a>
-                                            % if item.name != '管理员':
-                                            <a href="group/${item.id}/roles/edit">设置角色</a>
-                                            % endif
-                                            % if item.name not in ('用户', '管理员'):
-                                            <a href="group/${item.id}?_method=delete" title="删除" class="text-danger" onclick="return confirm('确定要删除吗?')"><span class="glyphicon glyphicon-remove"></span></a>
-                                            % endif
-                                        </td>
-                                    </tr>
-                                    % endfor
-                                </tbody>
-                            </table>
-                        </div>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th width="192">名称</th>
+                                    <th>描述</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                % for item in pagination.records:
+                                <tr>
+                                    <td><a href="group/${item.id}" title="${item.name}">${item.name}</a></td>
+                                    <td>${item.description}</td>
+                                </tr>
+                                % endfor
+                            </tbody>
+                        </table>
                         <% action = 'group?keyword=' + (keyword if keyword else '') %>
                         <%namespace name="paginate" file="../include/pagination.html" />
                         ${paginate.show(action, pagination)}
