--- a/template/group/roles_edit.html
+++ b/template/group/roles_edit.html
@@ -3,12 +3,12 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
-                        <div class="list-group wrap">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
+                        <div class="list-group">
                             <a href="user" class="list-group-item">
                                 <span class="glyphicon glyphicon-folder-close"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
-                            <a href="javascript:" class="list-group-item active">
+                            <a href="group" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 组 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
                             <a href="log" class="list-group-item">
@@ -19,23 +19,20 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-wrench"></span> 设置角色</a></li>
-                            <li><a href="group/${model.id}"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
-                            <li><a href="group/${model.id}/edit"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
-                            <li><a href="group/add?parent_id=${model.id}"><span class="glyphicon glyphicon-plus"></span> 创建子组</a></li>
-                            <li><a href="group"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
-                            <li><a href="group/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="group/${model.id}/roles" method="post" class="wrap">
-                            <input type="hidden" name="_method" value="put" />
-                            <legend><h4>${model.name}</h4></legend>
-                            % for role in roles:
-                            <div class="checkbox">
-                                <label><input type="checkbox" name="role_id" value="${role.id}" ${'''checked="checked" ''' if role in model.roles else ''}/> ${role.name} [${role.description}]</label>
-                            </div>
-                            % endfor
+                        <form action="group/${model.id}/roles" method="post" class="mb20">
+                            <fieldset class="mb20">
+                                <input type="hidden" name="_method" value="put" />
+                                <legend><h4>${model.name}</h4></legend>
+                                % for role in roles:
+                                <div class="checkbox">
+                                    <label><input type="checkbox" name="role_id" value="${role.id}" ${'''checked="checked" ''' if role in model.roles else ''}/> ${role.name} [${role.description}]</label>
+                                </div>
+                                % endfor
+                            </fieldset>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
