--- a/template/login.html
+++ b/template/login.html
@@ -15,22 +15,24 @@
                 <div class="page-header">
                     <h1><span class="glyphicon glyphicon-user"></span> 登录</h1>
                 </div>
-                <form action="check" method="post" class="wrap">
-                    <input type="hidden" name="redirect" value="${redirect}" />
+                <form action="check" method="post" class="mb20">
                     % if message:
                     <div class="alert alert-danger alert-dismissable fade in">
                         <button type="button" class="close" data-dismiss="alert">×</button>
                         <strong>错误</strong> ${message}
                     </div>
                     % endif
-                    <div class="form-group">
-                        <label for="username"><font color="#ff0000">*</font>用户名</label>
-                        <input type="text" id="username" name="username" class="form-control" required="required" maxlength="16" />
-                    </div>
-                    <div class="form-group">
-                        <label for="password">密码</label>
-                        <input type="password" id="password" name="password" class="form-control" maxlength="16" />
-                    </div>
+                    <fieldset class="mb20">
+                        <input type="hidden" name="redirect" value="${redirect if redirect else '/'}" />
+                        <div class="form-group">
+                            <label for="username"><font color="#ff0000">*</font>用户名</label>
+                            <input type="text" id="username" name="username" class="form-control" required="required" maxlength="16" />
+                        </div>
+                        <div class="form-group">
+                            <label for="password">密码</label>
+                            <input type="password" id="password" name="password" class="form-control" maxlength="16" />
+                        </div>
+                    </fieldset>
                     <button type="submit" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-ok"></span> 登录</button>
                 </form>
             </div>
