--- a/template/profile/edit.html
+++ b/template/profile/edit.html
@@ -3,9 +3,9 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
-                        <div class="list-group wrap">
-                            <a href="javascript:" class="list-group-item active">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
+                        <div class="list-group">
+                            <a href="profile" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
                             <a href="profile/password/edit" class="list-group-item">
@@ -19,21 +19,22 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
-                            <li><a href="profile"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="profile" method="post" class="wrap" style="width: 320px;">
-                            <input type="hidden" name="_method" value="put" />
-                            <div class="form-group">
-                                <label for="username">用户名</label>
-                                <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
-                            </div>
-                            <div class="form-group">
-                                <label for="name"><font color="#ff0000">*</font>姓名</label>
-                                <input type="text" id="name" name="name" value="${model.name}" class="form-control" required="required" maxlength="32" />
-                            </div>
+                        <form action="profile" method="post" class="mb20">
+                            <fieldset class="mb20" style="width: 320px;">
+                                <input type="hidden" name="_method" value="put" />
+                                <div class="form-group">
+                                    <label for="username">用户名</label>
+                                    <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="name"><font color="#ff0000">*</font>姓名</label>
+                                    <input type="text" id="name" name="name" value="${model.name}" class="form-control" required="required" maxlength="32" />
+                                </div>
+                            </fieldset>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
