--- a/template/profile/password_edit.html
+++ b/template/profile/password_edit.html
@@ -3,8 +3,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
-                        <div class="list-group wrap">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
+                        <div class="list-group">
                             <a href="profile" class="list-group-item">
                                 <span class="glyphicon glyphicon-folder-close"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
@@ -19,28 +19,30 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form id="primary-form" action="profile/password" method="post" class="wrap" style="width: 320px;">
-                            <input type="hidden" name="_method" value="put" />
-                            <div class="form-group">
-                                <label for="username">用户名</label>
-                                <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
-                            </div>
-                            <div class="form-group">
-                                <label for="original-password">原密码</label>
-                                <input type="password" id="original-password" name="original_password" class="form-control" maxlength="16" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password">密码</label>
-                                <input type="password" id="password" name="password" class="form-control" maxlength="16" />
-                            </div>
-                            <div class="form-group">
-                                <label for="confirm-password">确认密码</label>
-                                <input type="password" id="confirm-password" class="form-control" maxlength="16" />
-                            </div>
+                        <form action="profile/password" method="post" class="mb20">
+                            <fieldset class="mb20" style="width: 320px;">
+                                <input type="hidden" name="_method" value="put" />
+                                <div class="form-group">
+                                    <label for="username">用户名</label>
+                                    <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="original-password">原密码</label>
+                                    <input type="password" id="original-password" name="original_password" class="form-control" maxlength="16" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">密码</label>
+                                    <input type="password" id="password" name="password" class="form-control" maxlength="16" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="confirm-password">确认密码</label>
+                                    <input type="password" id="confirm-password" class="form-control" maxlength="16" />
+                                </div>
+                            </fieldset>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
