--- a/template/profile/view.html
+++ b/template/profile/view.html
@@ -3,8 +3,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
-                        <div class="list-group wrap">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-user"></span> ${auth.get_principal().get_prototype().name}</h4>
+                        <div class="list-group">
                             <a href="javascript:" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 个人信息 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
@@ -19,12 +19,12 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
                             <li><a href="profile/edit"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <dl class="dl-horizontal wrap">
+                        <dl class="dl-horizontal">
                             <dt>用户名</dt>
                             <dd>${model.username}</dd>
                             <dt>姓名</dt>
