--- a/template/user/list.html
+++ b/template/user/list.html
@@ -4,8 +4,8 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
-                        <div class="list-group wrap">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
+                        <div class="list-group">
                             <a href="javascript:" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
@@ -20,12 +20,12 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
                             <li><a href="user/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="user" method="get" class="form-search wrap">
+                        <form action="user" method="get" class="form-search mb20">
                             <div class="input-group">
                                 <input type="text" name="keyword" value="${S(keyword)}" class="form-control" placeholder="用户名或姓名" />
                                 <span class="input-group-addon btn btn-primary" onclick="$(this).parents('form').submit();" title="查询">
@@ -33,34 +33,22 @@
                                 </span>
                             </div>
                         </form>
-                        <div class="wrap">
-                            <table class="table table-striped table-hover">
-                                <thead>
-                                    <tr>
-                                        <th width="192">用户名</th>
-                                        <th>姓名</th>
-                                        <th width="224">操作</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    % for item in pagination.records:
-                                    <tr>
-                                        <td><a href="user/${item.id}">${item.username}</a></td>
-                                        <td>${item.name}</td>
-                                        <td>
-                                            <a href="user/${item.id}/edit" title="修改"><span class="glyphicon glyphicon-edit"></span></a>
-                                            <a href="user/${item.id}/password/edit">修改密码</a>
-                                            % if item.username != 'admin':
-                                            <a href="user/${item.id}/groups/edit">设置组</a>
-                                            <a href="user/${item.id}/roles/edit">设置角色</a>
-                                            <a href="user/${item.id}?_method=delete" title="删除" class="text-danger" onclick="return confirm('确定要删除吗?');"><span class="glyphicon glyphicon-remove"></span></a>
-                                            % endif
-                                        </td>
-                                    </tr>
-                                    % endfor
-                                </tbody>
-                            </table>
-                        </div>
+                        <table class="table table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th width="192">用户名</th>
+                                    <th>姓名</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                % for item in pagination.records:
+                                <tr>
+                                    <td><a href="user/${item.id}">${item.username}</a></td>
+                                    <td>${item.name}</td>
+                                </tr>
+                                % endfor
+                            </tbody>
+                        </table>
                         <% action = 'user?keyword=' + (keyword if keyword else '') %>
                         <%namespace name="paginate" file="../include/pagination.html" />
                         ${paginate.show(action, pagination)}
