--- a/template/user/password_edit.html
+++ b/template/user/password_edit.html
@@ -3,9 +3,9 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="content">
-                        <h4 class="wrap"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
-                        <div class="list-group wrap">
-                            <a href="javascript:" class="list-group-item active">
+                        <h4 class="mtb20"><span class="glyphicon glyphicon-cog"></span> 系统管理</h4>
+                        <div class="list-group">
+                            <a href="user" class="list-group-item active">
                                 <span class="glyphicon glyphicon-folder-open"></span> 用户 <span class="glyphicon glyphicon-chevron-right pull-right"></span>
                             </a>
                             <a href="group" class="list-group-item">
@@ -19,28 +19,22 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content">
-                        <ul class="nav nav-pills wrap">
+                        <ul class="nav nav-pills mtb20">
                             <li class="active"><a href="javascript:"><span class="glyphicon glyphicon-edit"></span> 修改密码</a></li>
-                            <li><a href="user/${model.id}"><span class="glyphicon glyphicon-expand"></span> 查看</a></li>
-                            <li><a href="user/${model.id}/edit"><span class="glyphicon glyphicon-edit"></span> 修改</a></li>
-                            % if model.username != 'admin':
-                            <li><a href="user/${model.id}/groups/edit"><span class="glyphicon glyphicon-wrench"></span> 设置组</a></li>
-                            <li><a href="user/${model.id}/roles/edit"><span class="glyphicon glyphicon-wrench"></span> 设置角色</a></li>
-                            % endif
-                            <li><a href="user"><span class="glyphicon glyphicon-list"></span> 列表</a></li>
-                            <li><a href="user/add"><span class="glyphicon glyphicon-plus"></span> 创建</a></li>
                             <li class="pull-right"><a href="javascript: history.back();"><span class="glyphicon glyphicon-hand-left"></span> 返回</a></li>
                         </ul>
-                        <form action="user/${model.id}/password" method="post" class="wrap" style="width: 320px;">
-                            <input type="hidden" name="_method" value="put" />
-                            <div class="form-group">
-                                <label for="username">用户名</label>
-                                <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password">密码</label>
-                                <input type="password" id="password" name="password" class="form-control" maxlength="16" />
-                            </div>
+                        <form action="user/${model.id}/password" method="post" class="mb20">
+                            <fieldset class="mb20" style="width: 320px;">
+                                <input type="hidden" name="_method" value="put" />
+                                <div class="form-group">
+                                    <label for="username">用户名</label>
+                                    <input type="text" id="username" value="${model.username}" class="form-control" disabled="disabled" />
+                                </div>
+                                <div class="form-group">
+                                    <label for="password">密码</label>
+                                    <input type="password" id="password" name="password" class="form-control" maxlength="16" />
+                                </div>
+                            </fieldset>
                             <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-ok"></span> 提交</button>
                         </form>
                     </div>
